Refactor Property Formats